--- a/allowedkeys.conf
+++ b/allowedkeys.conf
@@ -1,45 +1,48 @@
-a
-b
-c
-d
-e
-f
-g
-h
-i
-j
+y
 k
-l
-m
-n
-o
-p
-q
-r
-s
-t
 u
-v
+h
+l
+b
+j
+n
+.
+,
+d
+/
+^
+a
+e
+p
+E
+E-
+i
+)
+[
+=
+"
+(
+*
+$
++
+#jump
+#loot
+#untrap
+#force
+r
+Z
+q
+z
+F
 w
 x
-y
-z
-<
+t
+Q
+f
+W
+T
+P
+R
 >
-1
-2
-3
-4
-5
-6
-7
-8
-9
-0
-,
-.
-;
-:
-#loot
-#jump
-20s
+<
+Elbereth
